--- a/package.json
+++ b/package.json
@@ -14,19 +14,22 @@
     "@astrojs/mdx": "^4.2.4",
     "@astrojs/sitemap": "^3.3.0",
     "@astrojs/starlight": "^0.33.2",
+    "@lucide/astro": "^0.488.0",
     "@tailwindcss/vite": "^4.1.3",
     "astro": "^5.6.2",
     "astro-compressor": "^1.0.0",
+    "autoprefixer": "^10.4.21",
     "clipboard": "^2.0.11",
     "globby": "^14.1.0",
     "gsap": "^3.12.7",
     "html-minifier-terser": "^7.2.0",
     "lenis": "^1.2.3",
+    "postcss": "^8.5.3",
     "preline": "^3.0.1",
     "rimraf": "^6.0.1",
     "sharp": "^0.34.1",
     "sharp-ico": "^0.1.5",
-    "tailwindcss": "^4.1.3"
+    "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.10",
