--- a/package.json
+++ b/package.json
@@ -18,25 +18,28 @@
     "@tailwindcss/vite": "^4.1.3",
     "astro": "^5.6.2",
     "astro-compressor": "^1.0.0",
-    "autoprefixer": "^10.4.21",
     "clipboard": "^2.0.11",
+    "dotenv": "^16.5.0",
     "globby": "^14.1.0",
     "gsap": "^3.12.7",
     "html-minifier-terser": "^7.2.0",
     "lenis": "^1.2.3",
-    "postcss": "^8.5.3",
+    "oracledb": "^6.8.0",
     "preline": "^3.0.1",
     "rimraf": "^6.0.1",
     "sharp": "^0.34.1",
-    "sharp-ico": "^0.1.5",
-    "tailwindcss": "^4.1.4"
+    "sharp-ico": "^0.1.5"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.10",
+    "@types/oracledb": "^6.6.0",
     "astro-vtbot": "^2.1.2",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
     "prettier": "^3.5.3",
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-tailwindcss": "^0.6.11",
+    "tailwindcss": "^4.1.4",
     "typescript": "^5.8.3"
   }
 }
