--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "clipboard": "^2.0.11",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "flyonui": "^2.1.0",
     "globby": "^14.1.0",
     "gsap": "^3.12.7",
     "html-minifier-terser": "^7.2.0",
@@ -32,6 +33,8 @@
     "sharp-ico": "^0.1.5"
   },
   "devDependencies": {
+    "@iconify/json": "^2.2.333",
+    "@iconify/tailwind4": "^1.0.6",
     "@tailwindcss/forms": "^0.5.10",
     "@types/oracledb": "^6.6.0",
     "astro-vtbot": "^2.1.2",
