--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@astrojs/sitemap": "^3.3.0",
     "@astrojs/starlight": "^0.33.2",
     "@lucide/astro": "^0.488.0",
+    "@paypal/checkout-server-sdk": "^1.0.3",
     "@tabler/icons-vue": "^3.33.0",
     "@tailwindcss/vite": "^4.1.3",
     "astro": "^5.6.2",
     "astro-compressor": "^1.0.0",
     "astro-icon": "^1.1.5",
     "clipboard": "^2.0.11",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "flyonui": "^2.1.0",
